Modify content in index.html
Updated heading and paragraph content in index.html.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <h1>Selamat</h1>
-    <p>Kamu sudah sejauh ini sertifikatmu kalau tidak terdownload automatis
-        <br><a href="https://fbt.notion.site/BukuAku-2de0f806b47180a38585eb48b2e2bf60">di sini</a>.</p>
+    <h1>>.<</h1>
+    <p>/\
+        <br><a href="https://fbt.notion.site/BukuAku-2de0f806b47180a38585eb48b2e2bf60">[][]</a>.</p>
 <p><br>031211</p>
     <script>
         window.location.href = "https://fbt.notion.site/BukuAku-2de0f806b47180a38585eb48b2e2bf60";
